--- a/contact.html
+++ b/contact.html
@@ -81,9 +81,9 @@
                             <!--Name input-->
                             <div class="form-group">
                                 <label for="name"><span class="requiredStar">*</span>Name</label><br>
-                                <input class="forminput" type="text" id="name" name="firstName" placeholder="First"
-                                    required>
-                                <input class="forminput" type="text" id="name" name="lastName" placeholder="Last"
+                                <input class="forminput name" type="text" id="firstName" name="firstName"
+                                    placeholder="First" required>
+                                <input class="forminput" type="text" id="lastName" name="lastName" placeholder="Last"
                                     required>
                             </div>
                             <!--Email input-->
