--- a/weddingresources.html
+++ b/weddingresources.html
@@ -85,7 +85,7 @@
 
                     <div class="textContainer">
                         <div class="weddingResourcesHeading">
-                            <h1 onclick="togglePopup('popup-1')">Wedding Band</h1>
+                            <h1 onclick="togglePopup('popup-1')">Wedding Bands</h1>
                         </div>
                     </div>
 
@@ -99,11 +99,7 @@
 
                                 <div class="slides">
                                     <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
-                                    <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
-                                    <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                        src="images/weddingresources/weddingband/weddingBand.jpg" alt="">
                                 </div>
 
                                 <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
@@ -111,13 +107,11 @@
 
                                 <div class="dots">
                                     <span class="dot" onclick="currentSlide(1, 0)"></span>
-                                    <span class="dot" onclick="currentSlide(2, 0)"></span>
-                                    <span class="dot" onclick="currentSlide(3, 0)"></span>
                                 </div>
                             </div>
 
                             <div class="popupheading">
-                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Wedding Band</h1>
+                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Wedding Bands</h1>
                             </div>
                             <p>
 
@@ -135,7 +129,7 @@
 
                     <div class="textContainer">
                         <div class="weddingResourcesHeading">
-                            <h1 onclick="togglePopup('popup-2')">Florist</h1>
+                            <h1 onclick="togglePopup('popup-2')">Florists</h1>
                         </div>
                     </div>
 
@@ -149,11 +143,7 @@
 
                                 <div class="slides">
                                     <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
-                                    <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
-                                    <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                        src="images/weddingresources/florist/florist.jpg" alt="">
                                 </div>
 
                                 <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
@@ -161,13 +151,11 @@
 
                                 <div class="dots">
                                     <span class="dot" onclick="currentSlide(1, 1)"></span>
-                                    <span class="dot" onclick="currentSlide(2, 1)"></span>
-                                    <span class="dot" onclick="currentSlide(3, 1)"></span>
                                 </div>
                             </div>
 
                             <div class="popupheading">
-                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Florist</h1>
+                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Florists</h1>
                             </div>
                             <p>
 
@@ -185,7 +173,7 @@
 
                     <div class="textContainer">
                         <div class="weddingResourcesHeading">
-                            <h1 onclick="togglePopup('popup-3')">Photographer</h1>
+                            <h1 onclick="togglePopup('popup-3')">Photographers</h1>
                         </div>
                     </div>
 
@@ -199,11 +187,7 @@
 
                                 <div class="slides">
                                     <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
-                                    <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
-                                    <img class="mySlides fade portrait"
-                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                        src="images/weddingresources/photographer/photographer.jpg" alt="">
                                 </div>
 
                                 <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
@@ -211,13 +195,11 @@
 
                                 <div class="dots">
                                     <span class="dot" onclick="currentSlide(1, 2)"></span>
-                                    <span class="dot" onclick="currentSlide(2, 2)"></span>
-                                    <span class="dot" onclick="currentSlide(3, 2)"></span>
                                 </div>
                             </div>
 
                             <div class="popupheading">
-                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Photographer</h1>
+                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Photographers</h1>
                             </div>
                             <p>
 
