--- a/weddingresources.html
+++ b/weddingresources.html
@@ -114,7 +114,11 @@
                                 <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Wedding Bands</h1>
                             </div>
                             <p>
-
+                            <ul>
+                                <li>Joe Conroy</li>
+                                <li><a href="http://www.joeconroy.ie/">joeconroy.ie</a></li>
+                                <li><a href="https://www.instagram.com/joeycphotography/">Instagram</a></li>
+                            </ul>
                             </p>
                         </div>
                     </div>
@@ -158,7 +162,15 @@
                                 <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Florists</h1>
                             </div>
                             <p>
-
+                            <ul>
+                                <li>Floral essence</li>
+                                <li><a href="https://www.floralessence.ie/">floralessence.ie</a></li>
+                                <li><a href="tel:0578666371"></a>057 8666371</li>
+                                <li><a href="https://www.facebook.com/flessence/">Facebook</a></li>
+                                <li><a href="https://www.instagram.com/floralessenceportlaoise/">Instagram</a></li>
+                                <br>
+                                <li>Dublin Rd,<br>Beladd,<br>Portlaoise,<br>Laois,<br>R32 YX2N</li>
+                            </ul>
                             </p>
                         </div>
                     </div>
@@ -202,7 +214,13 @@
                                 <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Photographers</h1>
                             </div>
                             <p>
-
+                            <ul>
+                                <li>Joe Conroy</li>
+                                <li><a href="http://www.joeconroy.ie/">joeconroy.ie</a></li>
+                                <li><a href="https://www.instagram.com/joeycphotography/">Instagram</a></li>
+                                <br>
+                                <li>17 Main St,<br>Moneyballytyrrell,<br>Portlaoise,<br>Laois,<br>R32 YX2N</li>
+                            </ul>
                             </p>
                         </div>
                     </div>
