--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -2,6 +2,15 @@
 <html lang="en-IE" dir="ltr">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EGVGXF44L1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-EGVGXF44L1');
+    </script>
     <meta charset="utf-8">
     <!-- mobile setting -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
