--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
     <!-- Links to stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
-    <script src="js/validateEmail.js" defer></script>
-    <script src="js/sidenav.js" defer></script>
+    <script src="js/formValidation.js"></script>
+    <script src="js/sidenav.js"></script>
 </head>
 
 
@@ -101,7 +101,7 @@
                                 <input class="forminput" type="email" id="email" onselectstart="return false"
                                     oncut="return false" oncopy="return false" onpaste="return false"
                                     ondrag="return false" ondrop="return false" name="email"
-                                    placeholder="example@example.com" placeholder="example@example.com" required>
+                                    placeholder="example@example.com" required>
                             </div>
 
                             <div class="form-group">
@@ -115,14 +115,17 @@
 
                             <!--Number input-->
                             <div class="form-group">
-                                <label for="mobileNumber"><span class="requiredStar">*</span>Mobile
-                                    number</label><br>
-                                <input class="forminput" type="tel" id="mobileNumber" name="mobileNumber" required>
+                                <label for="mobileNumber"><span class="requiredStar">*</span>Mobile number</label><br>
+
+                                <input class="forminput" type="tel" id="mobileNumber"
+                                    pattern="^\(?\+?([0-9]{1,3})?[-.\s]?([0-9]{3})[-.\s]?([0-9]{3})[-.\s]?([0-9]{4})$"
+                                    name="mobileNumber" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="landlineNumber">Landline number</label><br>
-                                <input class="forminput" type="tel" id="landlineNumber" name="landlineNumber">
+                                <input class="forminput" type="tel" id="landlineNumber"
+                                    onblur="validateLandlineNumber()" name="landlineNumber">
                             </div>
 
                             <!--Message input-->
@@ -132,7 +135,7 @@
                                     rows="4" cols="70"></textarea>
                             </div>
 
-                            <button onclick="return validateEmail();" type="submit" name="Submit">Submit</button>
+                            <button onclick="formValidation();" type="submit" name="Submit">Submit</button>
                         </form>
                     </div>
                 </section>
