--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
             </div>
             <div class="menuIcon">
                 <button class="hamburger">
-                    <div class="bar">
-                    </div>
+                    <span class="bar">
+                    </span>
                 </button>
             </div>
         </div>
