--- a/about.html
+++ b/about.html
@@ -68,8 +68,8 @@
             </div>
             <div class="menuIcon">
                 <button class="hamburger">
-                    <div class="bar">
-                    </div>
+                    <span class="bar">
+                    </span>
                 </button>
             </div>
         </div>
