--- a/celebrationcakes.html
+++ b/celebrationcakes.html
@@ -70,8 +70,8 @@
             </div>
             <div class="menuIcon">
                 <button class="hamburger">
-                    <div class="bar">
-                    </div>
+                    <span class="bar">
+                    </span>
                 </button>
             </div>
         </div>
