--- a/weddingresources.html
+++ b/weddingresources.html
@@ -352,7 +352,7 @@
                                                             <div
                                                                 style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                                 <svg width="50px" height="50px" viewBox="0 0 60 60"
-                                                                    version="1.1" xmlns="https://www.w3.org/2000/svg"
+                                                                    version="1.1" xmlns="http://www.w3.org/2000/svg"
                                                                     xmlns:xlink="https://www.w3.org/1999/xlink">
                                                                     <g stroke="none" stroke-width="1" fill="none"
                                                                         fill-rule="evenodd">
@@ -477,7 +477,7 @@
                                                             <div
                                                                 style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                                 <svg width="50px" height="50px" viewBox="0 0 60 60"
-                                                                    version="1.1" xmlns="https://www.w3.org/2000/svg"
+                                                                    version="1.1" xmlns="http://www.w3.org/2000/svg"
                                                                     xmlns:xlink="https://www.w3.org/1999/xlink">
                                                                     <g stroke="none" stroke-width="1" fill="none"
                                                                         fill-rule="evenodd">
@@ -565,7 +565,7 @@
 
             <div class="bottomSpace"></div>
         </div>
-
+    </div>
 </body>
 
 
