--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -566,22 +566,35 @@
                             An Indian influenced wedding cake with a nod to Irish design … Celtic Knot stencil … I was
                             delighted to make this cake after a two year delay.
                             <br><br>
-                            LEMON POPPYSEED CAKE
-                            Lemon PoppySeed Sponge with Lemon Drizzle,
-                            filled with Vanilla Buttercream and Lemon Curd.
-                            <br><br>
-                            CHOCOLATE BISCUIT CAKE
-                            Digestive & Rich Tea biscuits combined with a rich chocolate
-                            with hits of Mars Bars, Maltesers and Cadbury Caramel.
-                            <br><br>
-                            SALTED CARAMEL CAKE
-                            Caramel sponge with caramel buttercream,
-                            drizzled with salted caramel
-                            <br><br>
-                            PISTACHIO AND CARDAMOM CAKE
-                            Pistachio and Cardamom sponge
-                            with rose water meringue buttercream frosting
-                        </p>
+                        <ul>
+                            <li>
+                                LEMON POPPYSEED CAKE:
+                                <br>
+                                Lemon PoppySeed Sponge with Lemon Drizzle,
+                                filled with Vanilla Buttercream and Lemon Curd.
+                            </li>
+                            <br>
+                            <li>
+                                CHOCOLATE BISCUIT CAKE:
+                                <br>
+                                Digestive & Rich Tea biscuits combined with a rich chocolate
+                                with hits of Mars Bars, Maltesers and Cadbury Caramel.
+                            </li>
+                            <br>
+                            <li>
+                                SALTED CARAMEL CAKE:
+                                <br>
+                                Caramel sponge with caramel buttercream,
+                                drizzled with salted caramel
+                            </li>
+                            <br>
+                            <li>
+                                PISTACHIO AND CARDAMOM CAKE:
+                                <br>
+                                Pistachio and Cardamom sponge
+                                with rose water meringue buttercream frosting
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
