--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,28 @@
     <meta name="description"
         content="The Cake Company Ballyfin designs and makes unique cakes for your special occasions">
 
+    <!-- Open Graph / Facebook and Whatsapp -->
+    <!-- Changes how it will be displayed on facebook and Whatsapp-->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="The Cake Company Ballyfin">
+    <meta property="og:url" content="https://ctwebdesign2.github.io/cake-company/contact.html">
+    <meta property="og:title" content="Contact | The Cake Company Ballyfin">
+    <meta property="og:description"
+        content="The Cake Company Ballyfin designs and makes unique cakes for your special occasions">
+    <meta property="og:image" content="images/metaLogo.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+
+    <!-- Twitter -->
+    <!-- Changes how it will be displayed on twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ctwebdesign2.github.io/cake-company/contact.html">
+    <meta property="twitter:title" content="Contact | The Cake Company Ballyfin">
+    <meta property="twitter:description"
+        content="The Cake Company Ballyfin designs and makes unique cakes for your special occasions">
+    <meta property="twitter:image" content="images/metaLogo.jpg">
+
     <!-- Inserts a image into the website tab, has access to various different sizes -->
     <link rel="icon" href="images/favicon.png" type="image/ico" sizes="16x16">
     <link rel="icon" href="images/favicon.png" type="image/ico" sizes="32x32">
@@ -154,7 +176,7 @@
                                 </label>
                             </div>
                             <div class="checkBoxes">
-                                <label class="checkboxContainer">Red Velvet
+                                <label class="checkboxContainer">Coconut & Lime
                                     <input type="checkbox" name="checkbox">
                                     <span class="checkboxCheckmark"></span>
                                 </label>
@@ -203,11 +225,10 @@
                                     </optgroup>
                                     <optgroup name="celebrationType" label="Celebration Cakes">
                                         <option value="Birthday cake">Birthday cake</option>
-                                        <option value="Christening Cake">Christening Cake
-                                        </option>
-                                        <option value="Anniversary Cake">Anniversary Cake
-                                        </option>
+                                        <option value="Christening Cake">Christening Cake</option>
+                                        <option value="Anniversary Cake">Anniversary Cake</option>
                                         <option value="Communion Cake">Communion Cake</option>
+                                        <option value="Communion Cake">Other</option>
                                     </optgroup>
                                 </select>
                             </div>
