--- a/about.html
+++ b/about.html
@@ -103,25 +103,51 @@
             </div>
             <hr class="headinglinebreak">
             <img id="aboutImg" src="images/about/-A-header.jpg" alt="">
-            <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                    class="colouredvbar">|</span><span class="smallSpace"> </span><i class="ballyfinItalic">ballyfin</i>
-                was established by Ann Tilson in 2015 ... following many
-                years
-                of passionate baking for friends and family.</p>
-            <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                    class="colouredvbar">|</span><span class="smallSpace"> </span><i class="ballyfinItalic">ballyfin</i>
-                designs and makes one-of-a-kind cakes for your special
-                occasion
-                … weddings … anniversaries … birthdays … &nbsp;christenings …</p>
-            <p class="abouttext">We will discuss your ideas on style and theme to realise the cake you want for you
-                celebration and you will be brought through the different cake flavour options.</p>
-            <p class="abouttext">Each cake is made in our studio using the best ingredients possible … 70% Belgian
-                chocolate … fresh free-range eggs … all combined with love and care.</p>
-            <p class="abouttext">The Cake Company<span class="smallSpace"> </span>
-                <span class="colouredvbar">|</span><span class="smallSpace"> </span>
-                <i class="ballyfinItalic">ballyfin</i> looks forward making a special
-                cake specially for you …
-            </p>
+            <table>
+                <tr>
+                    <th>
+                        <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
+                                class="colouredvbar">|</span><span class="smallSpace"> </span><i
+                                class="ballyfinItalic">ballyfin</i>
+                            was established by Ann Tilson in 2015 ... following many
+                            years
+                            of passionate baking for friends and family.</p>
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
+                                class="colouredvbar">|</span><span class="smallSpace"> </span><i
+                                class="ballyfinItalic">ballyfin</i>
+                            designs and makes one-of-a-kind cakes for your special
+                            occasion
+                            … weddings … anniversaries … birthdays … &nbsp;christenings …</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="abouttext">We will discuss your ideas on style and theme to realise the cake you want
+                            for you
+                            celebration and you will be brought through the different cake flavour options.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="abouttext">Each cake is made in our studio using the best ingredients possible … 70%
+                            Belgian
+                            chocolate … fresh free-range eggs … all combined with love and care.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="abouttext">The Cake Company<span class="smallSpace"> </span>
+                            <span class="colouredvbar">|</span><span class="smallSpace"> </span>
+                            <i class="ballyfinItalic">ballyfin</i> looks forward making a special
+                            cake specially for you …
+                        </p>
+                    </td>
+                </tr>
+            </table>
             <div class="bottomSpace"></div>
         </div>
     </div>
