--- a/celebrationcakes.html
+++ b/celebrationcakes.html
@@ -1350,11 +1350,12 @@
                             <h1>CELEBRATION CAKES&nbsp;&nbsp;|&nbsp;&nbsp;Lily Christening Cake</h1>
                         </div>
                         <p>
-                            No prizes for guessing what this little girl was christened ...
-                            <br>
-                            Belgian Chocolate Cake with vanilla buttercream ... design inspired by Juniper Cakery ...
-                            <br>
-                            ombre buttercream icing with hand made sugar paste Peony Rose.
+                        <ol>
+                            <li>No prizes for guessing what this little girl was christened ...</li>
+                            <li>Belgian Chocolate Cake with vanilla buttercream ... design inspired by Juniper Cakery
+                            </li>
+                            <li>... ombre buttercream icing with hand made sugar paste Peony Rose.</li>
+                        </ol>
                         </p>
                     </div>
                 </div>
