--- a/contact.html
+++ b/contact.html
@@ -220,10 +220,10 @@
                                     celebrating:</label>
                                 <select name="celebrationType" id="celebrationType" required>
                                     <option value="" selected>Please select an option</option>
-                                    <optgroup name="celebrationType" label="Wedding Cakes">
+                                    <optgroup label="Wedding Cakes">
                                         <option value="Wedding">Wedding</option>
                                     </optgroup>
-                                    <optgroup name="celebrationType" label="Celebration Cakes">
+                                    <optgroup label="Celebration Cakes">
                                         <option value="Birthday cake">Birthday cake</option>
                                         <option value="Christening Cake">Christening Cake</option>
                                         <option value="Anniversary Cake">Anniversary Cake</option>
