--- a/weddingresources.html
+++ b/weddingresources.html
@@ -157,8 +157,8 @@
                                             <div style="padding: 19% 0;"></div>
                                             <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                 <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                    xmlns="https://www.w3.org/2000/svg"
-                                                    xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
                                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <g transform="translate(-511.000000, -20.000000)"
                                                             fill="#000000">
@@ -265,8 +265,8 @@
                                             <div style="padding: 19% 0;"></div>
                                             <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                 <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                    xmlns="https://www.w3.org/2000/svg"
-                                                    xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
                                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <g transform="translate(-511.000000, -20.000000)"
                                                             fill="#000000">
@@ -400,8 +400,8 @@
                                             <div style="padding: 19% 0;"></div>
                                             <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                 <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                    xmlns="https://www.w3.org/2000/svg"
-                                                    xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
                                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <g transform="translate(-511.000000, -20.000000)"
                                                             fill="#000000">
@@ -509,8 +509,8 @@
                                             <div style="padding: 19% 0;"></div>
                                             <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                 <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                    xmlns="https://www.w3.org/2000/svg"
-                                                    xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
                                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <g transform="translate(-511.000000, -20.000000)"
                                                             fill="#000000">
@@ -645,8 +645,8 @@
                                             <div style="padding: 19% 0;"></div>
                                             <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                 <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                    xmlns="https://www.w3.org/2000/svg"
-                                                    xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
                                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <g transform="translate(-511.000000, -20.000000)"
                                                             fill="#000000">
@@ -751,8 +751,8 @@
                                             <div style="padding: 19% 0;"></div>
                                             <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
                                                 <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                    xmlns="https://www.w3.org/2000/svg"
-                                                    xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
                                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <g transform="translate(-511.000000, -20.000000)"
                                                             fill="#000000">
